--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,6 +3,7 @@
  
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
+    <img src="/images/Love-hungry-1.png" alt="logo" height="100" width="100">
     <a class="navbar-brand" href="#">Love-Hungry</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,10 +13,10 @@
         <a class="nav-link active" aria-current="page" href="#">Home</a>    
         <a class="nav-link active" aria-current="page" href="#">History</a> 
         <a class="nav-link active" aria-current="page" href="#">Log out</a> 
-
       </div>
     </div>
   </div>
 </nav>
 </nav>
+
 <h2>Hello World!</h2>
