adds button to link signup page to login page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,3 +11,6 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<h2> Not a member? </h2>
+<a class="btn btn-danger" href="#" role="button">Sign up </a>
