--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,44 +13,23 @@
     <title>{{title}}</title>
   </head>
   <body>
-
-    <nav class="navbar" style="background-color: #e3f2fd;">
-
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <img
-            src="/images/Love-hungry-1.png"
-            alt="logo"
-            height="100"
-            width="100"
-          />
-          <a class="navbar-brand" href="#">Love-Hungry</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="#"
-              >History</a>
-              <a class="nav-link active" aria-current="page" href="#">Log out</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </nav>
-
+    
+<nav class="navbar" style="background-color: #C68CD9;" >
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <img src="/images/Love-hungry-1.png" alt="logo" height="100"  width="100">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link " aria-current="page" href="/">Dating</a>    
+        <a class="nav-link" aria-current="page" href="#">History</a>
+        <a class="nav-link" aria-current="page" href="/login">Log in</a> 
+        <a class="nav-link" aria-current="page" href="#">Log out</a> 
+      </div>
+    </div>
+  </div>
+</nav>
+</nav>
+    
     {{{body}}}
 
   </body>
