--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,40 @@
 <h2>Welcome to Love-Hungry! Please Put in your info below</h2>
 
-<select class="custom-select custom-select-sm">
-  <option selected>In which burrough do you live/like to eat?</option>
-  <option value="1">Queens</option>
-  <option value="2">Bronx</option>
-  <option value="3">Manhattan</option>
-  <option value="4">Brooklyn</option>
-  <option value="5">Staten Island</option>
-</select>
-<select class="custom-select custom-select-sm">
-  <option selected>Which cuisine would do want as your default option?</option>
-  <option value="1">Chinese</option>
-  <option value="2">American</option>
-  <option value="3">Indian</option>
-  <option value="4">Thai</option>
-  <option value="5">Sushi</option>
-  <option value="6">Pizza</option>
-
-</select>
+<form>
+    <div class="form-group row">
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">First Name</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
+    </div>
+    <div class="form-group row">
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Last Name</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
+    </div>
+    <div class="form-group row">
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
+    </div>
+    <select class="custom-select custom-select-sm">
+    <option selected>In which burrough do you live/like to eat?</option>
+    <option value="1">Queens</option>
+    <option value="2">Bronx</option>
+    <option value="3">Manhattan</option>
+    <option value="4">Brooklyn</option>
+    <option value="5">Staten Island</option>
+    </select>
+    <select class="custom-select custom-select-sm">
+    <option selected>Which cuisine would do want as your default option?</option>
+    <option value="1">Chinese</option>
+    <option value="2">American</option>
+    <option value="3">Indian</option>
+    <option value="4">Thai</option>
+    <option value="5">Sushi</option>
+    <option value="6">Pizza</option>
+    </select>
+    <div class="custom-file">
+    <input type="file" class="custom-file-input" id="customFile">
+    <label class="custom-file-label" for="customFile">Choose file</label>
+    </div>
+</form>
