--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,30 @@
 <h2> Please login or Sign up if you don't have an account</h2>
-<form>
+<form id="login-form">
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <label for="email-login">Email address</label>
+    <input
+      type="email"
+      class="form-control"
+      id="email-login"
+      aria-describedby="emailHelp"
+      placeholder="Enter email"
+    />
+    <small id="emailHelp" class="form-text text-muted">We'll never share your
+      email with anyone else.</small>
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <label for="password-login">Password</label>
+    <input
+      type="password"
+      class="form-control"
+      id="password-login"
+      placeholder="Password"
+    />
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 <h2> Not a member? </h2>
 <a class="btn btn-danger" href="#" role="button">Sign up </a>
+
+<script src="/js/login.js"></script>
