--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,5 @@
-<h2>Welcome to Love-Hungry! Please Put in your info below</h2>
+<h2>Welcome to Love-Hungry!</h2>
+<h3>Please put in your info below</h3>
 
 <form>
     <div class="form-group row">
