--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
               {{#if logged_in}}
                 <button
                   id="logout"
-                  class="nav-link btn btn-link"
+                  class="nav-link btn"
                   aria-current="page"
                 >Logout</button>
               {{else}}
