--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,40 +2,63 @@
 <h3>Please put in your info below</h3>
 
 <form>
-    <div class="form-group row">
-    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">First Name</label>
+    <div class="form-group">
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Full Name</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
+      <input type="text" class="form-control form-control-sm" id="user_name" placeholder="Full Name">
     </div>
-    <div class="form-group row">
-    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Last Name</label>
+    <div class="form-group">
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">email</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
+      <input type="email" class="form-control form-control-sm" id="user_email" placeholder="person@gmail.com">
     </div>
-    <div class="form-group row">
-    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
+    <div class="form-group">
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">password</label>
     <div class="col-sm-10">
-    <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
+      <input type="text" class="form-control form-control-sm" id="user_password" placeholder="password">
     </div>
-    <select class="custom-select custom-select-sm">
-    <option selected>In which burrough do you live/like to eat?</option>
-    <option value="1">Queens</option>
-    <option value="2">Bronx</option>
-    <option value="3">Manhattan</option>
-    <option value="4">Brooklyn</option>
-    <option value="5">Staten Island</option>
-    </select>
-    <select class="custom-select custom-select-sm">
-    <option selected>Which cuisine would do want as your default option?</option>
-    <option value="1">Chinese</option>
-    <option value="2">American</option>
-    <option value="3">Indian</option>
-    <option value="4">Thai</option>
-    <option value="5">Sushi</option>
-    <option value="6">Pizza</option>
-    </select>
-    <div class="custom-file">
-    <input type="file" class="custom-file-input" id="customFile">
-    <label class="custom-file-label" for="customFile">Choose file</label>
+    <div class="form-group col-sm-10 m-2">
+    <label for="exampleFormControlTextarea1">Tell us a bit about yourself</label>
+    <textarea class="form-control" id="user_bio" rows="4"></textarea>
+  </div>
+    <div class="form-group">
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">birthdate</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control form-control-sm" id="user_birthdate" placeholder="birthdate">
+    </div>
+    <div class="form-check form-check-inline m-3">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+      <label class="form-check-label" for="inlineRadio1">Female</label>
+      </div>
+      <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+      <label class="form-check-label" for="inlineRadio2">Male</label>
+      </div>
+      <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+      <label class="form-check-label" for="inlineRadio3">Other</label>
+    </div>
+    <div class="form-group">
+      <select class="custom-select col-sm-10 m-3">
+      <option selected>In which burrough do you live/like to eat?</option>
+      <option value="1">Queens</option>
+      <option value="2">Bronx</option>
+      <option value="3">Manhattan</option>
+      <option value="4">Brooklyn</option>
+      <option value="5">Staten Island</option>
+      </select>
+      <select class="custom-select custom-select-sm col-sm-10 m-3">
+      <option selected>Which cuisine do you want as your default option?</option>
+      <option value="1">Chinese</option>
+      <option value="2">American</option>
+      <option value="3">Indian</option>
+      <option value="4">Thai</option>
+      <option value="5">Sushi</option>
+      <option value="6">Pizza</option>
+      </select>
+      <div class="custom-file col-sm-10 m-3">
+      <input type="file" class="custom-file-input" id="customFile">
+      <label class="custom-file-label" for="customFile">Choose file</label>
+      </div>
     </div>
 </form>
