--- a/views/partials/user-details.handlebars
+++ b/views/partials/user-details.handlebars
@@ -1,7 +1,15 @@
-<section class="card">
-  <img class="card-img-top" src="{{user.picture}}" alt="User Picture">
-  <div class="card-body">
-    <h5 class="card-title">{{user.name}}</h5>
-    <p class="card-text">Gender: {{user.gender}}</p>
+<div class="card mb-3">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="{{profile_picture_url}}" class="card-img" alt="{{username}}">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">{{username}}</h5>
+        <p class="card-text"><strong>Gender:</strong> {{gender}}</p>
+        <p class="card-text"><strong>Zodiac Sign:</strong> {{zodiac_sign}}</p>
+        <a href="/message-board/{{id}}" class="btn btn-primary">Message</a>
+      </div>
+    </div>
   </div>
-</section>
+</div>
