--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
           />
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="/">Dating</a>
+              <a class="nav-link" aria-current="page" href="/dating">Dating</a>
               <a class="nav-link" aria-current="page" href="#">History</a>
               {{#if logged_in}}
                 <button
