adds zodiac selection to signup page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -56,6 +56,21 @@
       <option value="5">Sushi</option>
       <option value="6">Pizza</option>
       </select>
+      <select class="custom-select custom-select-sm col-sm-10 m-3">
+      <option selected>Which cuisine do you want as your default option?</option>
+      <option value="Aquarius">Aquarius</option>
+      <option value="Aries">Aries</option>
+      <option value="Pisces">Pisces</option>
+      <option value="Taurus">Taurus</option>
+      <option value="Gemini">Gemini</option>
+      <option value="Cancer">Cancer</option>
+      <option value="Leo">Leo</option>
+      <option value="Virgo">Virgo</option>
+      <option value="Libra">Libra</option>
+      <option value="Scorpio">Scorpio</option>
+      <option value="Sagittarius">Sagittarius</option>
+      <option value="Capricorn">Capricorn</option>
+      </select>
       <div class="custom-file col-sm-10 m-3">
       <input type="file" class="custom-file-input" id="customFile">
       <label class="custom-file-label" for="customFile">Choose file</label>
