fixes prompt question for zodiac

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -57,7 +57,7 @@
       <option value="6">Pizza</option>
       </select>
       <select class="custom-select custom-select-sm col-sm-10 m-3">
-      <option selected>Which cuisine do you want as your default option?</option>
+      <option selected>What is your zodiac?</option>
       <option value="Aquarius">Aquarius</option>
       <option value="Aries">Aries</option>
       <option value="Pisces">Pisces</option>
