--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,7 @@
 
-<<<<<<< HEAD
-=======
 
 <h2>Hello World!</h2>
->>>>>>> 7cf19899755bcbd3fe7c1e58ee55a61cb25d22ad
-{{> header}}
+
 
 <div class="container mt-4">
   <h1>Matches</h1>
@@ -14,4 +11,4 @@
   {{/each}}
 </div>
 
-{{> footer}}
+{{!-- {{> footer}} --}}
