--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href="/login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Log Out</a>
+            <button id="logout">Log Out</button>
           </li>
         </ul>
         <form class="d-flex" role="search">
