--- a/views/partials/user-details.handlebars
+++ b/views/partials/user-details.handlebars
@@ -1,13 +1,15 @@
+{{#each displayDates as |date|}}
+
 <div class="card mb-3">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="{{profile_picture_url}}" class="card-img" alt="{{username}}">
+      <img src="{{date.profile_pic}}" class="card-img" alt="{{date.name}}">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">{{username}}</h5>
-        <p class="card-text"><strong>Gender:</strong> {{gender}}</p>
-        <p class="card-text"><strong>Zodiac Sign:</strong> {{zodiac_sign}}</p>
+        <h5 class="card-title">{{date.name}}</h5>
+        <p class="card-text"><strong>Gender:</strong> {{date.gender}}</p>
+        <p class="card-text"><strong>Zodiac Sign:</strong> {{date.zodiac_sign}}</p>
         <a href="/message-board/{{id}}" class="btn btn-primary">Message</a>
       </div>
     </div>
