button for submit is centered

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -128,7 +128,7 @@
           <img src="/images/avatar_09.png"></img>
         </label>
       </div>
-      <div class="col-auto  align-content-center">
+      <div class="col-auto d-flex justify-content-center m-4">
         <button type="submit" class="btn btn-danger mb-3">Submit to Love</button>
       </div>
       
