--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,32 +1,30 @@
 <h2> Please login or Sign up if you don't have an account</h2>
-<form id="login-form">
-  <div class="form-group">
-    <label for="email-login">Email address</label>
+<form id='login-form'>
+  <div class='form-group'>
+    <label for='email-login'>Email address</label>
     <input
-      type="email"
-      class="form-control"
-      id="email-login"
-      aria-describedby="emailHelp"
-      placeholder="Enter email"
+      type='email'
+      class='form-control'
+      id='email-login'
+      aria-describedby='emailHelp'
+      placeholder='Enter email'
     />
-    <small id="emailHelp" class="form-text text-muted">We'll never share your
+    <small id='emailHelp' class='form-text text-muted'>We'll never share your
       email with anyone else.</small>
   </div>
-  <div class="form-group">
-    <label for="password-login">Password</label>
+  <div class='form-group'>
+    <label for='password-login'>Password</label>
     <input
-      type="password"
-      class="form-control"
-      id="password-login"
-      placeholder="Password"
+      type='password'
+      class='form-control'
+      id='password-login'
+      placeholder='Password'
     />
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type='submit' class='btn btn-primary'>Submit</button>
 </form>
 
 <h2> Not a member? </h2>
-<a class="btn btn-danger" href="/signup" role="button">Sign up </a>
+<a class='btn btn-danger' href='/signup' role='button'>Sign up </a>
 
-<script src="/js/login.js"></script>
-
-<script src="/js/login.js"></script>
+<script src='/js/login.js'></script>
