--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -129,9 +129,9 @@
         </label>
       </div>
       <div class="col-auto d-flex justify-content-center m-4">
-        <button type="submit" class="btn btn-danger mb-3">Submit to Love</button>
+        <button type="submit" class="btn btn-danger mb-3" id="signupBtn">Submit to Love</button>
       </div>
-      
-      
     </div>
 </form>
+
+<script src="/js/signup.js"></script>
