--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -1,11 +1,7 @@
-body {
- background-image: url("paper.gif");
- background-color: #cccccc;
-}
-<div class="card-title d-flex justify-content-center card-body text-danger">
+<div class="card-title d-flex justify-content-center card-body text-danger ">
   <h2 class=" ">Dating Portal</h2>
 </div>
-<div class="card-text d-flex justify-content-left card-body text-danger">
+<div class="card-text d-flex justify-content-center card-body text-danger ">
   <h3>Other users in {{location}} that want {{what_to_eat}}</h3>
 </div>
   <section id="dating results">
@@ -13,7 +9,7 @@ body {
   </section>
 
   <section>
-    <div class="card-text d-flex justify-content-left card-body text-danger">
+    <div class="card-text d-flex justify-content-center card-body text-danger">
     <h3>Suggested {{what_to_eat}} Restaraunts:</h3>
     </div>
     {{#each displayRestaurants as |restaraunt|}}
