--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,16 +22,16 @@
       <div class='collapse navbar-collapse' id='navbarSupportedContent'>
         <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
           <li class='nav-item'>
-            <a class='nav-link active' aria-current='page' href='/dating'>Dating</a>
+            <a class='nav-link active text-light '  aria-current='page' href='/dating'><h3>Dating</a>
           </li>
           <li class='nav-item'>
-            <a class='nav-link' href='/history'>History</a>
+            <a class='nav-link text-light' href='/history'><h3>History</a>
           </li>
           <li class='nav-item'>
-            <a class='nav-link active' aria-current='page' href='/login'>Login</a>
+            <a class='nav-link active text-light' aria-current='page' href='/login'><h3>Login</a>
           </li>
           <li class='nav-item'>
-            <a class='nav-link active' id="logout" aria-current='page'>Log out</a>
+            <a class='nav-link active text-light' id="logout" aria-current='page'><h3>Log out</a>
           </li>
         </ul>
         <form class='d-flex' role='search'>
