--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -1,15 +1,16 @@
-<div class="card-title d-flex justify-content-center card-body text-danger ">
-  <h3 class=" ">Welcome to Dating Portal</h3>
-</div>
-<div class="card-text d-flex justify-content-center card-body text-danger ">
-  <h5>Other users in {{location}} that want {{what_to_eat}}</h5>
-</div>
+<div class="card" style='background-color: #C68CD9'>
+  <div class="card-title d-flex justify-content-center card-body text-danger ">
+    <h3 class=" ">Welcome to Dating Portal</h3>
+  </div>
+  <div class="card-text d-flex justify-content-center card-body text-danger ">
+    <h5>Other users in {{location}} that want {{what_to_eat}}</h5>
+  </div>
   <section id="dating results">
     {{> user-details}}
   </section>
   <section>
     <div class="card-text d-flex justify-content-center card-body text-danger">
-    <h5>Suggested {{what_to_eat}} Restaraunts:</h5>
+      <h5>Suggested {{what_to_eat}} Restaraunts:</h5>
     </div>
     {{#each displayRestaurants as |restaraunt|}}
     <div class="card mb-3">
@@ -21,7 +22,6 @@
           <div class="card-body">
             <h5 class="card-title">{{restaraunt.name}}</h5>
             <p class="card-text"><strong>{{restaraunt.dba}}</strong></p>
-
           </div>
         </div>
       </div>
@@ -29,8 +29,8 @@
     {{/each}}
   </section>
   <div class="text-center ">
-    <a href=" #" class="btn btn-danger ">Go somewhere</a>
+    <i class="bi bi-wechat"></i>
+    <a href=" #" class="btn btn-danger">go somewhere</a>
   </div>
-
-
-
+  <br><br><br><br><br><br><br><br><br><br><br>
+</div>
