added backround-color for dating homepage login signup

--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -1,9 +1,9 @@
-<div class="card" style='background-color: #C68CD9'>
+
   <div class="card-title d-flex justify-content-center card-body text-danger ">
-    <h3 class=" ">Welcome to Dating Portal</h3>
+    <h3 class=" ">Welcome to Dating Portal</h3><br><br><br>
   </div>
   <div class="card-text d-flex justify-content-center card-body text-danger ">
-    <h5>Other users in {{location}} that want {{what_to_eat}}</h5>
+    <h5>Other users in {{location}} that want {{what_to_eat}}</h5><br><br><br>
   </div>
   <section id="dating results">
     {{> user-details}}
@@ -27,10 +27,12 @@
       </div>
     </div>
     {{/each}}
-  </section>
+  </section><br><br>
   <div class="text-center ">
-    <i class="bi bi-wechat"></i>
     <a href=" #" class="btn btn-danger">go somewhere</a>
-  </div>
-  <br><br><br><br><br><br><br><br><br><br><br>
-</div>
+
+  <style>
+    body{
+     background-color: #C68CD9;
+    }
+  </style>
