--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,3 +28,9 @@
 <a class='btn btn-danger' href='/signup' role='button'>Sign up </a>
 
 <script src='/js/login.js'></script>
+
+<style>
+    body{
+     background-color: #C68CD9;
+    }
+  </style>
