--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -138,5 +138,9 @@
       </div>
     </div>
 </form>
-
+<style>
+    body{
+     background-color: #C68CD9;
+    }
+  </style>
 <script src="/js/signup.js"></script>
