resize avatar images on user profile results

--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -5,7 +5,7 @@
   <div class="card-text d-flex justify-content-center card-body text-danger ">
     <h5>Other users in {{location}} that want {{what_to_eat}}</h5><br><br><br>
   </div>
-  <section id="dating results">
+  <section id="dating results" class="dflex">
     {{> user-details}}
   </section>
   <section>
