adds icon, bg color

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
-<div class="jumbotron jumbotron-fluid bg-light">
+<div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Find Love through Food</h1>
+    <h1 class="display-4">Find Love through Food &#129346; </h1>
     <p class="lead">Connect with like-minded foodies and find your perfect match.</p>
     <hr class="my-4">
     <p>Join Love-Hungry today and start exploring new restaurants, cuisines, and experiences with someone special.</p>
