fixed button on homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,9 @@
     <hr class="my-4">
     <p>Join Love-Hungry today and start exploring new restaurants, cuisines, and experiences with someone special.</p>
     {{#unless isAuthenticated}}
-    <a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up Now</a>
+    <div class="text-center">
+      <a class="btn btn-danger btn-lg " href="/signup" role="button">Sign Up Now</a>
+    </div>
     {{/unless}}
   </div>
 </div>
