--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -27,3 +27,8 @@
     <button type="submit" class="btn btn-primary">Update Profile</button>
   </form>
 </div>
+<style>
+    body{
+     background-color: #C68CD9;
+    }
+  </style>
