messages render on message page

--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -20,8 +20,8 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">{{restaraunt.name}}</h5>
-            <p class="card-text"><strong>{{restaraunt.dba}}</strong></p>
+            <h5 class="card-title">{{restaraunt.dba}}</h5>
+            <p class="card-text">{{restaraunt.building}} {{restaraunt.street}}</p>
           </div>
         </div>
       </div>
