--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 <body>
   <nav class='navbar navbar-expand-lg' style='background-color: #C68CD9'>
     <div class='container-fluid'>
-      <img src='/images/Love-hungry-1.png' alt='logo' height='100' width='100' />
+     <a href="/"> <img src='/images/Love-hungry-1.png' alt='logo' height='100' width='100' /> </a>
       <a class='navbar-brand' href='#'></a>
       <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
         aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
