--- a/views/message-board.handlebars
+++ b/views/message-board.handlebars
@@ -1,6 +1,9 @@
-<div class="container">
-  <h1>Message Board</h1>
 
+<div class="container">
+  
+  <div class="card-title d-flex justify-content-center card-body git r ">
+    <h1>Message Board</h1>
+  </div>
   <div class="row">
     <div class="col-md-4">
       <h4>Users</h4>
