--- a/views/partials/user-details.handlebars
+++ b/views/partials/user-details.handlebars
@@ -1,4 +1,7 @@
+<h1 id='userID' class='hidden'>{{user_id}}</h1>
+
 {{#each displayDates as |date|}}
+  <p id='resultID' class='hidden'>{{date.id}}</p>
   <div class='card mb-3 justify-content-center'>
     <div class='row no-gutters'>
       <div class='col-md-2'>
@@ -16,7 +19,7 @@
             class='btn btn-primary'
             data-bs-toggle='modal'
             data-bs-target='#exampleModal'
-            data-bs-whatever='{{date.name}}'
+            data-bs-whatever='{{date.id}}'
           >Invite {{date.name}} to dinner</button>
 
           <div
