--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -62,6 +62,10 @@
       <option value="Thai">Thai</option>
       <option value="Sushi">Sushi</option>
       <option value="Pizza">Pizza</option>
+      <option value="Albanian">Albanian</option>
+      <option value="Mexican">Mexican</option>
+      <option value="Carribean">Carribean</option>
+      <option value="Seafood">Seafood</option>
       </select>
       <select class="custom-select custom-select-sm col-sm-10 m-3" id="zodiac">
       <option selected>What is your zodiac?</option>
