adds code to update.js file and links it to dating.handlebars

--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -48,7 +48,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Nevermind</button>
-        <button type="button" class="btn" id="update-btn" style="background-color: #8e39aa; color:#e8dfeb">Show me Love</button>
+        <button type="button" class="btn" id="update-btn" style="background-color: #8e39aa; color:#e8dfeb" data-bs-dismiss="modal">Show me Love</button>
       </div>
     </div>
   </div>
@@ -81,3 +81,4 @@
      background-color: #C68CD9;
     }
   </style>
+  <script src="/js/update.js"></script>
