--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
       experiences with someone special.</p>
     {{#if logged_in}}
       <div class='text-center'>
-        <a class='btn btn-danger btn-lg' href='/signup' role='button'>Find A
+        <a class='btn btn-primary btn-lg' href='/signup' role='button'>Find A
           Date</a>
       </div>
     {{else}}
