message page displays messages and has reply button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,8 +48,8 @@
             <li class='nav-item'>
               <h4><a
                   class='nav-link text-light'
-                  href='/history'
-                >History</a></h4>
+                  href='/messages'
+                >Messages</a></h4>
             </li>
             {{#if logged_in}}
               <li class='nav-item'>
